# vs1053

./: Cargo.toml  README.md
examples/play_mp3/: Cargo.toml  README.md
examples/play_mp3/.cargo/: config.toml
examples/play_mp3/src/: main.rs  sample_mp3.rs
src/: codec.rs  lib.rs  vs1053_patches.rs  vs1053b_patches.rs  vs1053b_patches_flac.rs
